# ChatGPTDevFriendly

./: LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py
src/chatgptdevfriendly/: v1.py
tests/: main.py  test_main.py
